orchestra-compiler/tests/invalid_task_arch_empty.mlir
// RUN: not %orchestra-opt %s --verify-diagnostics 2>&1 | %FileCheck %s

"orchestra.schedule"() ({
  // CHECK: error: 'orchestra.task' op 'arch' key in 'target' dictionary cannot be empty
  "orchestra.task"() <{target = { arch = "" }}> ({
    "orchestra.return"() : () -> ()
  }) : () -> ()
  "orchestra.return"() : () -> ()
}) : () -> ()
